# Codex

./: .gitignore  Codex.cabal  Makefile  QuickExamples.md  README.md  sources.txt
etc/world/: countries.txt
src/Codex/: Lib.hs
src/Codex/Lib/: Collect.hs  Compression.hs  Game.hs  IO.hs  List.hs  Map.hs  Patterns.hs  Random.hs
src/Codex/Lib/Church/: Nat.hs
src/Codex/Lib/Game/: Difficulty.hs  Match.hs  Player.hs  Team.hs  Tournament.hs
src/Codex/Lib/Geo/: Names.hs  World.hs  World2.hs
src/Codex/Lib/LoadBalancer/: List.hs  Strategies.hs
src/Codex/Lib/Network/: EchoServer.hs  TCPServer.hs
src/Codex/Lib/Network/TCP/: Client.hs  EchoServer.hs  HangClient.hs  HangServer.hs  Proxy.hs  ProxyServer.hs  Server.hs  Stresser.hs
src/Codex/Lib/Science/: DNA.hs  Gender.hs  RNA.hs
src/Codex/Lib/Server/: MVar.hs
src/Codex/Lib/Server/MVar/: Testing.hs
src/Codex/Meetup/M0/: Compression.hs  GuessEq.hs  Relationships.hs
src/Codex/Meetup/M0/Compression/: Huffman.hs  RLE.hs
src/Codex/Meetup/M0/DNA/: Palindrome.hs
src/Codex/Meetup/M0/LambdaArith/: Int.hs  Nat.hs
src/Codex/Meetup/M1/: README.md  RPS.hs
src/Codex/Meetup/M1/Compression/: BZip.hs  GZip.hs  Inflate.hs  LZ4.hs  RLE.hs  Raw.hs  Tournament.hs
src/Codex/Meetup/M1/DNA/: Palindromes.hs
src/Codex/Meetup/M1/LoadBalancer/: Demo.hs
src/Codex/Meetup/M1/NumericalAbstraction/: Nat.hs
src/Codex/Meetup/M1/OlympicRings/: Haha.hs  README.rd  Rings.elm  Rings2.elm
src/Codex/Meetup/M1/OlympicRings/cache/: Rings.elmi  Rings.elmo
src/Codex/Meetup/M1/RPS/: Include.hs  Internal.hs
src/Codex/Meetup/M1/WhoseOperator/: IsIt.hs
